--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,13 +39,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.3.0'
 
     implementation platform('com.google.firebase:firebase-bom:26.0.0')
 
     implementation 'com.google.firebase:firebase-analytics'
     //Circle image view
-    implementation 'de.hdodenhof:circleimageview:3.0.1'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
     //please wait animation
@@ -53,5 +53,8 @@ dependencies {
 
     //Air BnB splash screen animation
     implementation 'com.airbnb.android:lottie:3.7.0'
+
+    implementation 'androidx.appcompat:appcompat:1.4.0-alpha02'
+    implementation 'androidx.core:core-ktx:1.6.0-rc01'
 
 }
